[1.10] Issue 5156 (Add description to menu items) Part 1 http://code.google.com/p/fbug/issues/detail?id=5156 Added descriptions to Firebug menu items and Firebug Start Button menu items
http://code.google.com/p/fbug/source/detail?r=12780

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -39,25 +39,32 @@ pluralRule=1
 plural.Total_Firebugs2=%1$S Total Firebug;%1$S Total Firebugs
 
 inBrowser=In Browser
-detached=Detached
 minimized=Minimized
 enablement.for_all_pages=for all pages
 enablement.on=On
 enablement.off=Off
 none=Closed
-Detached=Detached
 Firebug_-_inactive_for_current_website=Firebug - inactive for current website
 Activate_Firebug_for_the_current_website=Activate Firebug for the current website
 Minimized=Minimized
 Minimize_Firebug=Minimize Firebug
 On_for_all_web_pages=On for All Web Pages
+firebug.menu.tip.On_for_all_Web_Sites=Activate Firebug by default for all websites
 firebug.menu.Clear_Activation_List=Clear Activation List
+firebug.menu.tip.Clear_Activation_List=Clear the list of websites Firebug is activated for
 
-top=Top
-bottom=Bottom
-left=Left
-right=Right
+firebug.menu.Detached=Detached
+firebug.menu.tip.Detached=Detach the Firebug UI into it's own window
+firebug.menu.Top=Top
+firebug.menu.tip.Top=Align the Firebug user interface at the top of the user agent window
+firebug.menu.Bottom=Bottom
+firebug.menu.tip.Bottom=Align the Firebug user interface at the bottom of the user agent window
+firebug.menu.Left=Left
+firebug.menu.tip.Left=Align the Firebug user interface at the left of the user agent window
+firebug.menu.Right=Right
+firebug.menu.tip.Right=Align the Firebug user interface at the right of the user agent window
 firebug.uiLocation=Firebug UI Location
+firebug.menu.tip.UI_Location=Position of the Firebug user interface
 
 # LOCALIZATION NOTE (firebug_options): Tooltip text used for Firebug icon menu (them left
 # most button on Firebug main toolbar)
@@ -68,6 +75,7 @@ firebug_options=Firebug Options
 firebug.Show_All_Panels=Show All Panels
 
 console.option.Show_Command_Line=Show Command Line
+console.option.tip.Show_Command_Line=Focus the Command Line / Show the Command Line Popup
 
 # Console panel options (located in tab's option menu)
 ShowJavaScriptErrors=Show JavaScript Errors
@@ -577,16 +585,16 @@ ProfilerStarted=The profiler is running. Click 'Profile' again to see its report
 # example: (56ms, 15 calls)
 plural.Profile_Time2=(%1$Sms, %2$S call);(%1$Sms, %2$S calls)
 
-NothingToProfile=No activity to profile.
-PercentTooltip=Percentage of time spent on this function.
-CallsHeaderTooltip=Number of times function was called.
-OwnTimeHeaderTooltip=Time spent in function, excluding nested calls.
-TimeHeaderTooltip=Time spent in function, including nested calls.
-AvgHeaderTooltip=Average time, including function calls.
-MinHeaderTooltip=Minimum time, including function calls.
-MaxHeaderTooltip=Maximum time, including function calls.
-ProfileButton.Enabled.Tooltip=Profile JavaScript execution time.
-ProfileButton.Disabled.Tooltip=Profile JavaScript execution time (Script panel must be enabled).
+NothingToProfile=No activity to profile
+PercentTooltip=Percentage of time spent on this function
+CallsHeaderTooltip=Number of times function was called
+OwnTimeHeaderTooltip=Time spent in function excluding nested calls
+TimeHeaderTooltip=Time spent in function including nested calls
+AvgHeaderTooltip=Average time including function calls
+MinHeaderTooltip=Minimum time including function calls
+MaxHeaderTooltip=Maximum time including function calls
+ProfileButton.Enabled.Tooltip=Profile JavaScript execution time
+ProfileButton.Disabled.Tooltip=Profile JavaScript execution time (Script panel must be enabled)
 Function=Function
 Percent=Percent
 
@@ -853,15 +861,63 @@ firebug.console.Info=Info
 firebug.console.Filter_by_Info=Filter by Info
 firebug.console.Debug_Info=Debug Info
 firebug.console.Filter_by_Debug_Info=Filter by Debug Info
-firebug.menu.Clear_Console=Clear Console
-firebug.menu.Reset_All_Options=Reset All Options
+
+firebug.Deactivate_Firebug=Deactivate Firebug
+firebug.tip.Deactivate_Firebug=Deactivate Firebug for the current website
+firebug.ShowFirebug=Open Firebug
+firebug.menu.tip.Open_Firebug=Show the Firebug UI
+firebug.HideFirebug=Hide Firebug
+firebug.menu.tip.Minimize_Firebug=Minimize Firebug, but keep it active
 firebug.menu.Enable_All_Panels=Enable All Panels
+firebug.menu.tip.Enable_All_Panels=Enable all activable panels
 firebug.menu.Disable_All_Panels=Disable All Panels
+firebug.menu.tip.Disable_All_Panels=Disable all activable panels
 firebug.menu.Customize_shortcuts=Customize Shortcuts
+firebug.menu.tip.Customize_Shortcuts=Customize Firebug internal key bindings
+firebug.Options=Options
+firebug.menu.tip.Options=Global Firebug preferences
 firebug.menu.Enable_Accessibility_Enhancements=Enable Accessibility Enhancements
+firebug.menu.tip.Enable_Accessibility_Enhancements=Enable full control via keyboard and other accessibility enhancements
 firebug.menu.Activate_Same_Origin_URLs=Activate Same Origin URLs
+firebug.menu.tip.Activate_Same_Origin_URLs=Activate Firebug for URLs matching the same origin policy
 firebug.menu.Reset_All_Firebug_Options=Reset All Firebug Options
+firebug.menu.tip.Reset_All_Firebug_Options=Reset all Firebug preferences to their default value
 firebug.menu.Firebug_Online=Firebug Online
+firebug.menu.tip.Firebug_Online=Websites related to Firebug
+firebug.menu.Vertical_Panels=Vertical Panels
+firebug.menu.tip.Vertical_Panels=Toggle the layout of the Firebug main and side panels
+firebug.menu.Show_Info_Tips=Show Info Tips
+firebug.menu.tip.Show_Info_Tips=Show popups with information about the hovered element
+firebug.Show_Error_Count=Show Error Count
+firebug.menu.tip.Show_Error_Count=Show the number of errors logged inside the console
+firebug.TextSize=Text Size
+firebug.menu.tip.Text_Size=Change the text size used in Firebug
+firebug.IncreaseTextSize=Increase Text Size
+firebug.menu.tip.Increase_Text_Size=Increase the text sizes used in Firebug
+firebug.DecreaseTextSize=Decrease Text Size
+firebug.menu.tip.Decrease_Text_Size=Decrease the text sizes used in Firebug
+firebug.NormalTextSize=Normal Text Size
+firebug.menu.tip.Normal_Text_Size=Reset the text size used in Firebug to the default
+firebug.Website=Firebug Website...
+firebug.menu.tip.Website=Open the official Firebug website
+firebug.FAQ=FAQ...
+firebug.menu.tip.FAQ=Open the page answering the frequently asked questions
+firebug.Documentation=Documentation...
+firebug.menu.tip.Documentation=Open the documentation about Firebug
+firebug.KeyShortcuts=Keyboard Shortcuts...
+firebug.menu.tip.Key_Shortcuts=Open the description of the mouse and keyboard shortcuts available in Firebug
+firebug.Forums=Discussion Group...
+firebug.menu.tip.Forums=Open the discussion group site
+firebug.Issues=Issue Tracker...
+firebug.menu.tip.Issues=Open the issue tracker site
+firebug.Donate=Contribute...
+firebug.menu.tip.Donate=Open the contribution site
+firebug.About=About...
+firebug.menu.tip.About=Information about Firebug
+ProfileJavaScript=Profile JavaScript
+firebug.menu.tip.Profile_JavaScript=Profile JavaScript execution time
+firebug.Search=Search
+firebug.menu.tip.Search=Set the focus to the search field
 
 # Firebug shortcuts
 firebug.shortcut.reenterCommand.label=Re-enter Command
@@ -1176,7 +1232,6 @@ firebug.Firebug=Firebug
 firebug.Close=Close
 firebug.View=View
 firebug.Help=Help
-firebug.Vertical=Vertical Panes
 firebug.Run=Run
 firebug.Copy=Copy
 firebug.History=History
@@ -1184,29 +1239,11 @@ firebug.Run_the_entered_command=Run the entered command
 firebug.Clear_the_Command_Editor=Clear the Command Editor
 firebug.Copy_the_script_as_a_bookmarklet=Copy the script as a bookmarklet
 firebug.Insert_a_previously_entered_command=Insert a previously entered command
-firebug.Options=Options
-firebug.TextSize=Text Size
-firebug.IncreaseTextSize=Increase Text Size
-firebug.DecreaseTextSize=Decrease Text Size
-firebug.NormalTextSize=Normal Text Size
-firebug.ShowTooltips=Show Preview Tooltips
-firebug.Website=Firebug Website...
-firebug.FAQ=FAQ...
-firebug.Documentation=Documentation...
-firebug.KeyShortcuts=Keyboard Shortcuts...
-firebug.Forums=Discussion Group...
-firebug.Issues=Issue Tracker...
-firebug.Donate=Contribute...
-firebug.About=About...
 firebug.AlwaysOpenInWindow=Always Open in New Window
-firebug.Show_Error_Count=Show Error Count
-firebug.ShowFirebug=Open Firebug
-firebug.HideFirebug=Hide Firebug
 firebug.OpenWith=Open With Editor
-firebug.CloseFirebug=Deactivate Firebug for This Site
+firebug.menu.tip.Open_With=Open the content in an external editor
 firebug.Permissions=Sites...
 firebug.Configure_Editors=Configure Editors
-firebug.Search=Search
 
 # LOCALIZATION NOTE (firebug.Rerun, firebug.Continue, firebug.StepOver, firebug.StepInto,
 # firebug.StepOut, firebug.RunUntil)
@@ -1230,7 +1267,6 @@ firebug.BreakOnErrors=Break on Errors
 firebug.InspectTooltip=Click an element in the page to inspect
 firebug.EditHTMLTooltip=Edit this HTML
 firebug.Profile=Profile
-firebug.ProfileScript=Profile JavaScript
 firebug.Clear=Clear
 firebug.ClearConsole=Clear Console
 firebug.ClearTooltip=Clear the console
