[1.10] Update description of a disabled panel (not status bar icon any more)
http://code.google.com/p/fbug/source/detail?r=12792

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -781,7 +781,7 @@ Copy_Style_Declaration=Copy Style Declaration
 plural.Error_Count2=%1$S Error;%1$S Errors
 
 moduleManager.title=%S Panel is disabled
-moduleManager.desc3=Use Firebug's status bar icon to enable/disable all panels at once. Use each panel's tab menu for individual control.
+moduleManager.desc3=Use Firebug's toolbar button to enable/disable all panels at once. Use each panel's tab menu for individual control.
 moduleManager.Enable=Enable
 
 # LOCALIZATION NOTE (moduleManager.scriptPanelNotAvailable): A description used in the Script panel
