[1.10] Issue 5157 (Add description to search options) http://code.google.com/p/fbug/issues/detail?id=5157
http://code.google.com/p/fbug/source/detail?r=12840

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -940,11 +940,17 @@ search.Firebug_Search=Firebug Search
 # search.Multiple_Files, search.Use_Regular_Expression):
 # Labels used within an options menu for the search box. This menu is displayed if the search box is focused.
 search.Next=Next
+search.tip.Next=Search for next match
 search.Previous=Previous
+search.tip.Previous=Search for previous match
 search.Case_Sensitive=Case Sensitive
+search.tip.Case_Sensitive=Consider the case when searching
 search.Case_Insensitive=Case Insensitive
+search.tip.Case_Insensitive=Ignore the case when searching
 search.Multiple_Files=Multiple Files
+search.tip.Multiple_Files=Search inside all files related to this panel
 search.Use_Regular_Expression=Use Regular Expression
+search.tip.Use_Regular_Expression=Interpret the entered string as regular expression when searching
 
 # LOCALIZATION NOTE (search.html.CSS_Selector, search.net.Headers, search.net.Parameters, search.net.Response_Bodies,
 # search.script.Multiple_Files):
@@ -954,6 +960,7 @@ search.html.CSS_Selector=CSS Selector
 search.net.Headers=Headers
 search.net.Parameters=Parameters
 search.net.Response_Bodies=Response Bodies
+search.net.tip.Response_Bodies=Search also in response bodies
 
 firebug.console.Persist=Persist
 firebug.console.Do_Not_Clear_On_Reload=Do Not Clear On Reload
