[1.10] Issue 5158 (Add description to panel tabs) http://code.google.com/p/fbug/issues/detail?id=5158
http://code.google.com/p/fbug/source/detail?r=12841

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -7,18 +7,31 @@ WindowTitle=Firebug - %S
 
 # Panel titles
 Panel-console=Console
+panel.tip.console=Allows observing console messages and executing JavaScript commands
 Panel-net=Net
+panel.tip.net=Allows analyzing the network traffic
 Panel-html=HTML
+panel.tip.html=Allows inspecting and manipulating the DOM nodes
 Panel-stylesheet=CSS
+panel.tip.stylesheet=Allows inspecting and manipulating the CSS stylesheets
 Panel-script=Script
+panel.tip.script=Allows debugging of JavaScript
 Panel-dom=DOM
+panel.tip.dom=Allows inspecting and manipulating the DOM properties
 Panel-css=Style
+panel.tip.css=Allows inspecting and manipulating the CSS rules of the selected DOM node
 Panel-computed=Computed
+panel.tip.computed=Allows inspecting the computed CSS values of the selected DOM node
 Panel-layout=Layout
+panel.tip.layout=Allows inspecting and manipulating the layout data of the selected DOM node
 Panel-domSide=DOM
+panel.tip.domSide=Allows inspecting and manipulating the DOM properties of the selected DOM node
 Panel-watches=Watch
+panel.tip.watches=Allows inspecting the JavaScript variables available in the current stack frame and defining watch expressions
 Panel-breakpoints=Breakpoints
+panel.tip.breakpoints=Allows manipulating of the set breakpoints
 Panel-callstack=Stack
+panel.tip.callstack=Allows observing the current JavaScript call stack
 Panel-scopes=Scopes
 
 firebug.DetachFirebug=Open Firebug in New Window
