[1.10] Corrected spelling according to Simon (follow up on r12840)
http://code.google.com/p/fbug/source/detail?r=12842

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -953,9 +953,9 @@ search.Firebug_Search=Firebug Search
 # search.Multiple_Files, search.Use_Regular_Expression):
 # Labels used within an options menu for the search box. This menu is displayed if the search box is focused.
 search.Next=Next
-search.tip.Next=Search for next match
+search.tip.Next=Search for the next match
 search.Previous=Previous
-search.tip.Previous=Search for previous match
+search.tip.Previous=Search for the previous match
 search.Case_Sensitive=Case Sensitive
 search.tip.Case_Sensitive=Consider the case when searching
 search.Case_Insensitive=Case Insensitive
@@ -963,7 +963,7 @@ search.tip.Case_Insensitive=Ignore the case when searching
 search.Multiple_Files=Multiple Files
 search.tip.Multiple_Files=Search inside all files related to this panel
 search.Use_Regular_Expression=Use Regular Expression
-search.tip.Use_Regular_Expression=Interpret the entered string as regular expression when searching
+search.tip.Use_Regular_Expression=Interpret the entered string as a regular expression when searching
 
 # LOCALIZATION NOTE (search.html.CSS_Selector, search.net.Headers, search.net.Parameters, search.net.Response_Bodies,
 # search.script.Multiple_Files):
