[1.10] Corrected translation according to Simon (follow up on r12841)
http://code.google.com/p/fbug/source/detail?r=12843

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -29,7 +29,7 @@ panel.tip.domSide=Allows inspecting and manipulating the DOM properties of the s
 Panel-watches=Watch
 panel.tip.watches=Allows inspecting the JavaScript variables available in the current stack frame and defining watch expressions
 Panel-breakpoints=Breakpoints
-panel.tip.breakpoints=Allows manipulating of the set breakpoints
+panel.tip.breakpoints=Allows manipulating the set breakpoints
 Panel-callstack=Stack
 panel.tip.callstack=Allows observing the current JavaScript call stack
 Panel-scopes=Scopes
