[1.10] Added some more descriptions missed in r12835
http://code.google.com/p/fbug/source/detail?r=12845

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -326,7 +326,9 @@ css.tip.Delete_Prop=Delete the property "%S"
 
 # Console context menu labels.
 BreakOnThisError=Break on This Error
+console.menu.tip.Break_On_This_Error=Stop the script execution as soon as this error occurs
 BreakOnAllErrors=Break on All Errors
+console.menu.tip.Break_On_All_Errors=Stop the script execution as soon as an error occurs
 
 # LOCALIZATION NOTE (script.option.Track_Throw_Catch):
 # Script panel option (located in tab's option menu). If set to true, tracking of
@@ -717,13 +719,19 @@ net.tip.Copy_Response=Copy the response body to the clipboard
 # panel when clicking an error object.
 CopyError=Copy Error
 console.menu.tip.Copy_Error=Copy the error information to the clipboard
-CopySource=Copy Function
 
-# LOCALIZATION NOTE (ShowCallsInConsole): Label for context menu item. Used in the Script
-# panel when clicking a function object.
+# LOCALIZATION NOTE (CopySource, dom.tip.Copy_Source): Context menu item of. Used in the Console
+# panel when clicking an error object.
+CopySource=Copy Function
+dom.tip.Copy_Source=Copy the function's source code to the clipboard
+
+# LOCALIZATION NOTE (ShowCallsInConsole): Context menu item of a function object inside the
+# DOM panel and Watch side panel.
 # %S = Name of the function
 # example: Log Calls to "getData"
+# example: Log calls to the function "getData" inside the Console panel
 ShowCallsInConsole=Log Calls to "%S"
+dom.tip.Log_Calls_To_Function=Log calls to the function "%S" inside the Console panel
 
 # LOCALIZATION NOTE (ShowEventsInConsole, html.tip.Show_Events_In_Console):
 # Menu item label used in HTML elements context menu. Allows logging of event information
