[1.10] Context menu for Command Editor (but this will yet change)
http://code.google.com/p/fbug/source/detail?r=12852

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -686,11 +686,13 @@ Min=Min
 Max=Max
 File=File
 
-# Support for clipboard actions.
+# Support for standard actions.
 Copy=Copy
 Cut=Cut
 Remove=Remove
+Delete=Delete
 Paste=Paste
+SelectAll=Select All
 
 html.Copy_Node=Copy %S
 html.tip.Copy_Node=Copy the %S node and all its contents to the clipboard
