--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -67,15 +67,15 @@ firebug.menu.Clear_Activation_List=Clear Activation List
 firebug.menu.tip.Clear_Activation_List=Clear the list of websites Firebug is activated for
 
 firebug.menu.Detached=Detached
-firebug.menu.tip.Detached=Detach the Firebug UI into it's own window
+firebug.menu.tip.Detached=Detach Firebug into its own window
 firebug.menu.Top=Top
-firebug.menu.tip.Top=Align the Firebug user interface at the top of the user agent window
+firebug.menu.tip.Top=Align Firebug to the top of the user agent window
 firebug.menu.Bottom=Bottom
-firebug.menu.tip.Bottom=Align the Firebug user interface at the bottom of the user agent window
+firebug.menu.tip.Bottom=Align Firebug to the bottom of the user agent window
 firebug.menu.Left=Left
-firebug.menu.tip.Left=Align the Firebug user interface at the left of the user agent window
+firebug.menu.tip.Left=Align Firebug to the left of the user agent window
 firebug.menu.Right=Right
-firebug.menu.tip.Right=Align the Firebug user interface at the right of the user agent window
+firebug.menu.tip.Right=Align Firebug to the right of the user agent window
 firebug.uiLocation=Firebug UI Location
 firebug.menu.tip.UI_Location=Position of the Firebug user interface
 
@@ -1008,15 +1008,15 @@ firebug.menu.tip.Enable_All_Panels=Enable all activable panels
 firebug.menu.Disable_All_Panels=Disable All Panels
 firebug.menu.tip.Disable_All_Panels=Disable all activable panels
 firebug.menu.Customize_shortcuts=Customize Shortcuts
-firebug.menu.tip.Customize_Shortcuts=Customize Firebug internal key bindings
+firebug.menu.tip.Customize_Shortcuts=Customize Firebug's internal key bindings
 firebug.Options=Options
 firebug.menu.tip.Options=Global Firebug preferences
 firebug.menu.Enable_Accessibility_Enhancements=Enable Accessibility Enhancements
 firebug.menu.tip.Enable_Accessibility_Enhancements=Enable full control via keyboard and other accessibility enhancements
-firebug.menu.Activate_Same_Origin_URLs=Activate Same Origin URLs
+firebug.menu.Activate_Same_Origin_URLs2=Activate For Same Origin URLs
 firebug.menu.tip.Activate_Same_Origin_URLs=Activate Firebug for URLs matching the same origin policy
 firebug.menu.Reset_All_Firebug_Options=Reset All Firebug Options
-firebug.menu.tip.Reset_All_Firebug_Options=Reset all Firebug preferences to their default value
+firebug.menu.tip.Reset_All_Firebug_Options=Reset all Firebug preferences to their default values
 firebug.menu.Firebug_Online=Firebug Online
 firebug.menu.tip.Firebug_Online=Websites related to Firebug
 firebug.menu.Vertical_Panels=Vertical Panels
@@ -1040,7 +1040,7 @@ firebug.menu.tip.FAQ=Open the page answering the frequently asked questions
 firebug.Documentation=Documentation...
 firebug.menu.tip.Documentation=Open the documentation about Firebug
 firebug.KeyShortcuts=Keyboard Shortcuts...
-firebug.menu.tip.Key_Shortcuts=Open the description of the mouse and keyboard shortcuts available in Firebug
+firebug.menu.tip.Key_Shortcuts=Open the list of mouse and keyboard shortcuts available in Firebug
 firebug.Forums=Discussion Group...
 firebug.menu.tip.Forums=Open the discussion group site
 firebug.Issues=Issue Tracker...
@@ -1052,7 +1052,7 @@ firebug.menu.tip.About=Information about Firebug
 ProfileJavaScript=Profile JavaScript
 firebug.menu.tip.Profile_JavaScript=Profile JavaScript execution time
 firebug.Search=Search
-firebug.menu.tip.Search=Set the focus to the search field
+firebug.menu.tip.Search=Set focus to the search field
 
 # Firebug shortcuts
 firebug.shortcut.reenterCommand.label=Re-enter Command
