[1.10] Followup on r12835 (according to Simon's suggestions)
http://code.google.com/p/fbug/source/detail?r=12866

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -204,9 +204,9 @@ ShadeBoxModel=Shade Box Model
 inspect.option.tip.Shade_Box_Model=Shade the different parts of the box model
 
 ScrollIntoView=Scroll Into View
-html.tip.Scroll_Into_View=Scroll the page, so that the element is visible
+html.tip.Scroll_Into_View=Scroll the page to make the element visible
 NewAttribute=New Attribute...
-html.tip.New_Attribute=Add a new attribute
+html.tip.New_Attribute=Add a new attribute to this element
 html.Edit_Node=Edit %S...
 html.Node=Node
 html.tip.Edit_Node=Edit the %S using the full text editor
@@ -228,16 +228,16 @@ html.label.Break_On_Text_Change=Break On Text Change
 
 html.label.HTML_Breakpoints=HTML Breakpoints
 html.label.Break_On_Attribute_Change=Break On Attribute Change
-html.tip.Break_On_Attribute_Change=Stop JavaScript execution as soon as an attribute of this element was changed
+html.tip.Break_On_Attribute_Change=Stop JavaScript execution when an attribute of this element changes
 html.label.Break_On_Child_Addition_or_Removal=Break On Child Addition or Removal
-html.tip.Break_On_Child_Addition_or_Removal=Stop JavaScript execution as soon as a child element is added to or removed from this element
+html.tip.Break_On_Child_Addition_or_Removal=Stop JavaScript execution when a child node is added to or removed from this element
 html.label.Break_On_Element_Removal=Break On Element Removal
-html.tip.Break_On_Element_Removal=Stop JavaScript execution as soon as the element is removed
+html.tip.Break_On_Element_Removal=Stop JavaScript execution when the element is removed
 
 # LOCALIZATION NOTE (html.label.Expand/Contract_All, html.tip.Expand/Contract_All):
 # Used within the HTML for a context menu item. The user can expand/contract
-# the element together with all its children to quickly see the entire 
-# hierarchical structure or collapse it.
+# the element and all its children to quickly see the entire hierarchical structure
+# or collapse it.
 html.label.Expand/Contract_All=Expand/Contract All
 html.tip.Expand/Contract_All=Expand/collapse all the children recursively
 
@@ -245,7 +245,7 @@ html.tip.Expand/Contract_All=Expand/collapse all the children recursively
 # Used within the DOM panel to create a 'property breakpoint'. Right-click on an property of an object.
 # The label is also used for the 'Break On Property Change' button (available on the toolbar).
 dom.label.breakOnPropertyChange=Break On Property Change
-dom.tip.Break_On_Property_Change=Stop the script execution as soon as the DOM property changed
+dom.tip.Break_On_Property_Change=Stop the JavaScript execution when this property changes
 
 # LOCALIZATION NOTE (dom.disableBreakOnPropertyChange): Used within the DOM panel for the
 # 'break on next button' in the case the option is activated
@@ -258,14 +258,14 @@ dom.label.DOM_Breakpoints=DOM Breakpoints
 # %S = Name of the clicked attribute
 # examples: Edit Attribute "onclick"...
 EditAttribute=Edit Attribute "%S"...
-html.tip.Edit_Attribute=Edit the value of the attribute "%S"
+html.tip.Edit_Attribute=Edit the value of the attribute "%S" of this element
 
 # LOCALIZATION NOTE (DeleteAttribute, html.tip.Delete_Attribute): Menu item label used in HTML panel context menu. Allows
 # deleting an existing HTML element attribute.
 # %S = Name of the clicked attribute
 # examples: Delete Attribute "onclick"...
 DeleteAttribute=Delete Attribute "%S"
-html.tip.Delete_Attribute=Delete the attribute "%S"
+html.tip.Delete_Attribute=Delete the attribute "%S" from this element
 
 # LOCALIZATION NOTE (InheritedFrom): Displaying an HTML element name + an applied CSS rule,
 # that has been inherited. Used in the Style side panel (under HTML panel).
@@ -298,7 +298,7 @@ css.tip.New_Rule=Add a new rule
 # %S = Selector of the clicked rule
 # examples: Delete "div > p"
 css.Delete_Rule=Delete "%S"
-css.tip.Delete_Rule=Delete the rule "%S" with all it's properties
+css.tip.Delete_Rule=Delete the rule "%S" and all its properties
 
 NewProp=New Property...
 css.tip.New_Prop=Add a new property to the current rule
@@ -326,9 +326,9 @@ css.tip.Delete_Prop=Delete the property "%S"
 
 # Console context menu labels.
 BreakOnThisError=Break on This Error
-console.menu.tip.Break_On_This_Error=Stop the script execution as soon as this error occurs
+console.menu.tip.Break_On_This_Error=Stop the JavaScript execution as soon as this error occurs
 BreakOnAllErrors=Break on All Errors
-console.menu.tip.Break_On_All_Errors=Stop the script execution as soon as an error occurs
+console.menu.tip.Break_On_All_Errors=Stop the JavaScript execution as soon as an error occurs
 
 # LOCALIZATION NOTE (script.option.Track_Throw_Catch):
 # Script panel option (located in tab's option menu). If set to true, tracking of
@@ -414,7 +414,7 @@ NewWatch=New watch expression...
 # LOCALIZATION NOTE (AddWatch, watch.tip.Add_Watch): Context menu item in the DOM panel, Script panel and Watch side panel.
 # Adds the selection or object to the Watch side panel to observe it
 AddWatch=Add Watch
-watch.tip.Add_Watch=Adds the selection/object to the Watch side panel to observe it
+watch.tip.Add_Watch=Add the selection/object to the Watch side panel for observation
 
 # LOCALIZATION NOTE (CopySourceCode, script.tip.Copy_Source_Code): Context menu item of the Script panel.
 # Copies the selected source code to the clipboard.
@@ -449,9 +449,9 @@ script.tip.Set_Breakpoint=Toggles setting of a breakpoint at the current line
 
 # LOCALIZATION NOTE (EditBreakpointCondition, breakpoints.tip.Edit_Breakpoint_Condition):
 # Context menu item of the Script panel.
-# Allows to edit the condition, under which a breakpoint stops the script execution
+# Allows to edit the condition, under which a breakpoint stops the JavaScript execution
 EditBreakpointCondition=Edit Breakpoint Condition...
-breakpoints.tip.Edit_Breakpoint_Condition=Edit the condition, under which this breakpoint stops the script execution
+breakpoints.tip.Edit_Breakpoint_Condition=Edit the condition, under which this breakpoint stops the JavaScript execution
 
 NoBreakpointsWarning=There are no breakpoints set in this page.
 
@@ -556,9 +556,9 @@ net.header.Protocol_Tooltip=The URL protocol used to locate the resource on the 
 net.label.XHR_Breakpoints=XHR Breakpoints
 
 # LOCALIZATION NOTE (net.label.Break_On_XHR, net.tip.Break_On_XHR):
-# Net panel context menu item for stopping the script execution on an XHR
+# Net panel context menu item for stopping the JavaScript execution on an XHR
 net.label.Break_On_XHR=Break On XHR
-net.tip.Break_On_XHR=Stop the script execution as soon as an XMLHttpRequest is made
+net.tip.Break_On_XHR=Stop the JavaScript execution as soon as an XMLHttpRequest is made
 
 # LOCALIZATION NOTE (net.headers.view_source, net.headers.pretty_print): Labels used in the
 # Net panel's Headers tab (displayed if you expand a network request). The label is used
@@ -1392,21 +1392,22 @@ script.tip.Script_Filter_All=Display all kinds of scripts
 # example: Step Out (Shift+F11)
 firebug.labelWithShortcut=%S (%S)
 
-# LOCALIZATION NOTE (firebug.Rerun, firebug.Continue, firebug.StepOver, firebug.StepInto,
-# firebug.StepOut, firebug.RunUntil):
+# LOCALIZATION NOTE (firebug.Rerun, script.tip.Rerun, firebug.Continue, script.tip.Continue,
+# firebug.StepOver, script.tip.Step_Over, firebug.StepInto, script.tip.Step_Into,
+# firebug.StepOut, script.tip.Step_Out, firebug.RunUntil, script.tip.Run_Until):
 # Labels used for debugger options available in the Script panel.
 script.Rerun=Rerun
-script.tip.Rerun=Reruns the current execution stack
+script.tip.Rerun=Rerun the current function call stack
 script.Continue=Continue
-script.tip.Continue=Continues the script execution
+script.tip.Continue=Continue the JavaScript execution
 script.Step_Over=Step Over
-script.tip.Step_Over=Executes the next command
+script.tip.Step_Over=Execute the next command
 script.Step_Into=Step Into
-script.tip.Step_Into=Executes the next command and jumps into functions
+script.tip.Step_Into=Execute the next command and jump into functions
 script.Step_Out=Step Out
-script.tip.Step_Out=Executes a function's body and returns to its caller
+script.tip.Step_Out=Execute the rest of the function's body and returns to its caller
 firebug.RunUntil=Run to This Line
-script.tip.Run_Until=Executes the script until the specified line
+script.tip.Run_Until=Execute the JavaScript until the specified line
 
 # LOCALIZATION NOTE (firebug.Inspect, firebug.InspectElement, firebug.InspectElementWithFirebug)
 # Labels for Firebug Inspector. Used by a button (available in Firefox Customize Toolbar dialog)
@@ -1468,7 +1469,7 @@ firebug.activation.privateBrowsingMode=Sites are not remembered in Private Brows
 # Label used within Script panel's options menu. Represents an option, that can be used
 # to switch of the break notifications.
 firebug.breakpoint.showBreakNotifications=Show Break Notifications
-firebug.breakpoint.tip.Show_Break_Notifications=Show a notification box, when a Break On ... feature or the debugger; keyword stopped the script execution 
+firebug.breakpoint.tip.Show_Break_Notifications=Show a notification box, when a Break On ... feature or the debugger; keyword stopped the JavaScript execution 
 
 # LOCALIZATION NOTE (firebug.activation.privateBrowsingMode):
 # Message displayed in a break notification popup next to a checkbox.
