[1.10] Second follow up on r12835
http://code.google.com/p/fbug/source/detail?r=12872

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -542,7 +542,7 @@ net.header.Status_Tooltip=Status of the received response
 net.header.Domain=Domain
 net.header.Domain_Tooltip=Domain of the executed request
 net.header.Size=Size
-net.header.Size_Tooltip=Size of the received response
+net.header.Size_Tooltip=Size of the received response (compressed size in case of compressed responses)
 net.header.Timeline=Timeline
 net.header.Timeline_Tooltip=Detailed timing info about request response round trip
 net.header.Local_IP=Local IP
