[1.10] Fixed key of label and tooltip of "Deactivate Firebug" (related to issue 5151)
http://code.google.com/p/fbug/source/detail?r=12875

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1085,8 +1085,8 @@ firebug.shortcut.rightFirebugTab.label=Switch to right Firebug panel
 firebug.shortcut.tip.rightFirebugTab=Switch to the Firebug panel to the right
 firebug.shortcut.toggleFirebug.label=Open Firebug
 firebug.shortcut.tip.toggleFirebug=Open/Minimize Firebug UI
-firebug.shortcut.label.closeFirebug=Deactivate Firebug
-firebug.shortcut.tip.closeFirebug=Deactivate Firebug
+firebug.shortcut.closeFirebug.label=Deactivate Firebug
+firebug.shortcut.tip.closeFirebug=Deactivate Firebug for the current website
 firebug.shortcut.previousFirebugTab.label=Previous Firebug panel
 firebug.shortcut.tip.previousFirebugTab=Switch to the previously selected Firebug panel
 firebug.shortcut.clearConsole.label=Clear Console
