[1.10] Issue 5248: Link to extensions page from Firebug Online menu
http://code.google.com/p/fbug/source/detail?r=12889

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1019,6 +1019,8 @@ firebug.menu.Reset_All_Firebug_Options=Reset All Firebug Options
 firebug.menu.tip.Reset_All_Firebug_Options=Reset all Firebug preferences to their default values
 firebug.menu.Firebug_Online=Firebug Online
 firebug.menu.tip.Firebug_Online=Websites related to Firebug
+firebug.menu.Extensions=Firebug Extensions...
+firebug.menu.tip.Extensions=Download and Install Firebug Extensions
 firebug.menu.Vertical_Panels=Vertical Panels
 firebug.menu.tip.Vertical_Panels=Toggle the layout of the Firebug main and side panels
 firebug.menu.Show_Info_Tips=Show Info Tips
