[1.10] Issue 5252 (Erroneous tooltips) http://code.google.com/p/fbug/issues/detail?id=5252
http://code.google.com/p/fbug/source/detail?r=12899

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -524,6 +524,10 @@ layout.option.tip.Show_Rulers=Show rulers and guides on the page when hovering p
 Loading=Loading...
 Headers=Headers
 
+# LOCALIZATION NOTE (net.tip.Clear)
+# Tooltip for the button inside the Net panel to clear the request list
+net.tip.Clear=Clear the request list
+
 # LOCALIZATION NOTE (net.header.Reset_Header, net.header.tip.Reset_Header)
 # Label for header context menu within the Net panel
 net.header.Reset_Header=Reset Header
@@ -986,16 +990,16 @@ search.net.Response_Bodies=Response Bodies
 search.net.tip.Response_Bodies=Search also in response bodies
 
 firebug.console.Persist=Persist
-firebug.console.Do_Not_Clear_On_Reload=Do Not Clear On Reload
-firebug.console.Show_All_Log_Entries=Show All Log Entries
+firebug.console.Do_Not_Clear_On_Reload2=Do not clear the panel on page reload
+firebug.console.Show_All_Log_Entries=Show all log entries
 firebug.console.Errors=Errors
-firebug.console.Filter_by_Errors=Filter by Errors
+firebug.console.Filter_by_Errors=Filter by errors
 firebug.console.Warnings=Warnings
-firebug.console.Filter_by_Warnings=Filter by Warnings
+firebug.console.Filter_by_Warnings=Filter by warnings
 firebug.console.Info=Info
-firebug.console.Filter_by_Info=Filter by Info
+firebug.console.Filter_by_Info=Filter by info
 firebug.console.Debug_Info=Debug Info
-firebug.console.Filter_by_Debug_Info=Filter by Debug Info
+firebug.console.Filter_by_Debug_Info=Filter by debug info
 
 firebug.Deactivate_Firebug=Deactivate Firebug
 firebug.tip.Deactivate_Firebug=Deactivate Firebug for the current website
