[1.10] Issue 5277 (Display import rule media queries and allow editing them) http://code.google.com/p/fbug/issues/detail?id=5277
http://code.google.com/p/fbug/source/detail?r=12918

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -300,10 +300,16 @@ css.tip.New_Rule=Add a new rule
 css.Delete_Rule=Delete "%S"
 css.tip.Delete_Rule=Delete the rule "%S" and all its properties
 
+# LOCALIZATION NOTE (css.menu.Edit_Media_Query, css.menu.tip.Edit_Media_Query):
+# Menu item label used in the CSS panel context menu.
+# Allows to add or edit the CSS media query of an import rule
+css.menu.Edit_Media_Query=Edit Media Query...
+css.menu.tip.Edit_Media_Query=Edit the media query assigned to this rule
+
 NewProp=New Property...
 css.tip.New_Prop=Add a new property to the current rule
 
-# LOCALIZATION NOTE (EditProp): Menu item label used in the CSS panel context menu.
+# LOCALIZATION NOTE (EditProp, css.tip.Edit_Prop): Menu item label used in the CSS panel context menu.
 # Allows to edit an existing CSS rule property.
 # %S = Name of the clicked property
 # examples: Edit "background-color"...
