[1.10] Issue 3159 (Show numeric character reference of MathML) http://code.google.com/p/fbug/issues/detail?id=3159
http://code.google.com/p/fbug/source/detail?r=12921

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -170,6 +170,13 @@ html.option.tip.Show_Comments=Show comment nodes
 # LOCALIZATION NOTE (html.option.Show_Text_Nodes_With_Entities, html.option.tip.Show_Text_Nodes_With_Entities):
 # HTML panel option (located in tab's option menu). If set to true, special characters will be
 # shown in their entity representation, e.g. " => &quot;, & => &amp;
+html.option.Show_Entities_As_Symbols=Show Entities As Symbols
+html.option.tip.Show_Entities_As_Symbols=Show all XML entities using their symbolic representation
+html.option.Show_Entities_As_Names=Show Entities As Names
+html.option.tip.Show_Entities_As_Names=Show all XML entities using their names
+html.option.Show_Entities_As_Unicode=Show Entities As Unicode
+html.option.tip.Show_Entities_As_Unicode=Show all XML entities in their Unicode representation
+
 ShowTextNodesWithEntities=Show Basic Entities
 html.option.tip.Show_Text_Nodes_With_Entities=Show the most common special characters in their entity representation
 
