Locale update: ja-JP

--- a/extension/locale/ja-JP/firebug.properties
+++ b/extension/locale/ja-JP/firebug.properties
@@ -893,7 +893,7 @@ firebug.Search=検索
 # LOCALIZATION NOTE (firebug.completion.empty): This label is used in the command linen
 firebug.Rerun=再実行
 firebug.Continue=コンティニュー (F8)
-firebug.StepOver=スッテプ オーバー (F10)
+firebug.StepOver=ステップ オーバー (F10)
 firebug.StepInto=ステップ イン (F11)
 firebug.StepOut=ステップ アウト
 firebug.RunUntil=この行まで実行
