Issue 5231: 'Deactivate Firebug' is shown even when Firebug is already deactivated

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1020,6 +1020,9 @@ firebug.ShowFirebug=Open Firebug
 firebug.menu.tip.Open_Firebug=Show the Firebug UI
 firebug.HideFirebug=Hide Firebug
 firebug.menu.tip.Minimize_Firebug=Minimize Firebug, but keep it active
+firebug.FocusFirebug=Focus Firebug Window
+firebug.menu.tip.Focus_Firebug=Focus Detached Firebug Window
+
 firebug.menu.Enable_All_Panels=Enable All Panels
 firebug.menu.tip.Enable_All_Panels=Enable all activable panels
 firebug.menu.Disable_All_Panels=Disable All Panels
