Issue 5352 (Allow rebind of Help/F1 shortcut key in Firebug's Customize Shortcut dialog) http://code.google.com/p/fbug/issues/detail?id=5352

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1124,7 +1124,9 @@ firebug.shortcut.tip.increaseTextSize=Increase the text sizes used in Firebug
 firebug.shortcut.decreaseTextSize.label=Decrease Text Size
 firebug.shortcut.tip.decreaseTextSize=Decrease the text sizes used in Firebug
 firebug.shortcut.normalTextSize.label=Normal Text Size
-firebug.shortcut.tip.normalTextSize=Resets the text sizes used in Firebug to the default
+firebug.shortcut.tip.normalTextSize=Reset the text sizes used in Firebug to the default
+firebug.shortcut.help.label=Open help
+firebug.shortcut.tip.help=Open the page answering the frequently asked questions
 
 firebug.panel_selector=Panel Selector
 
