Fixed untranslated hint at the top of the Completion List Popup

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -788,9 +788,9 @@ console.Break_On_All_Errors=Break On All Errors
 # in the Console panel
 console.Break_On_This_Error=Break On This Error
 
-# LOCALIZATION NOTE (console.Use_TAB_and_arrow_keys): Hint at the top of the Completion Popup
+# LOCALIZATION NOTE (console.Use_Arrow_keys_or_Enter): Hint at the top of the Completion List Popup
 # in the Command Line
-console.Use_TAB_and_arrow_keys=Use TAB and arrow keys
+console.Use_Arrow_keys_or_Enter=Use Arrow keys or Enter
 
 # LOCALIZATION NOTE (console.JSDisabledInFirefoxPrefs): Hint shown inside the Console panel in the case
 # JavaScript is not available
