--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1127,6 +1127,8 @@ firebug.shortcut.normalTextSize.label=Normal Text Size
 firebug.shortcut.tip.normalTextSize=Reset the text sizes used in Firebug to the default
 firebug.shortcut.help.label=Open help
 firebug.shortcut.tip.help=Open the page answering the frequently asked questions
+firebug.shortcut.toggleBreakOn.label=Toggle Break On ...
+firebug.shortcut.tip.toggleBreakOn=Enable/disable stopping the script execution on specific events occurring inside a panel
 
 firebug.panel_selector=Panel Selector
 
