Localization for issue 5438 (Allow jumping from web font usage in Style side panel to its definition) http://code.google.com/p/fbug/issues/detail?id=5438

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -494,6 +494,12 @@ style.option.tip.active=Display :active pseudo-class styles
 style.option.label.hover=:hover
 style.option.tip.hover=Display :hover pseudo-class styles
 
+# LOCALIZATION NOTE (css.label.Inspect_Declaration, css.tip.Inspect_Declaration):
+# CSS panel/Style side panel context menu option. Allows inspecting a font face of a web font
+# declaration inside the CSS panel
+css.label.Inspect_Declaration=Inspect Declaration
+css.tip.Inspect_Declaration= Inspect the declaration of this font
+
 # LOCALIZATION NOTE (css.option.Expand_Shorthand_Properties, css.option.tip.Expand_Shorthand_Properties):
 # CSS panel/Style side panel option (located in tab's option menu). If set to true,
 # CSS shorthand properties like 'margin' will be split into their components, e.g. 'margin-top',
