Followup on issue 4132 (Only show applied styles in Computed side panel) http://code.google.com/p/fbug/issues/detail?id=4132
In case there are no user-defined styles and User Agent CSS is not
displayed there must be a hint shown.

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -520,6 +520,11 @@ computed.option.tip.Sort_Alphabetically=Sort the styles by their name/group the 
 Show_Mozilla_specific_styles=Show Mozilla Specific Styles
 computed.option.tip.Show_Mozilla_Specific_Styles=Also show styles prefixed with -moz
 
+# LOCALIZATION NOTE (computed.No_User-Defined_Styles):
+# Displayed in the Computed side panel (available within the HTML panel) in case there are no
+# user-defined CSS rules applying to the selected element.
+computed.No_User-Defined_Styles=This element has no user-defined style rules.
+
 script.Type_any_key_to_filter_list=Type any key to filter list
 
 # LOCALIZATION NOTE (LayoutPadding, LayoutBorder, LayoutMargin, LayoutPosition, LayoutAdjacent):
